* scripts/mknmz.pl (parse_options): Change option name: 	s/--use-chasen-morph/--use-chasen-noun/. All related variables are 	changed.
	* nmz/util.c (nmz_is_file_exists): Bug fix: fclose(fp).

--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -22,7 +22,7 @@ $KAKASI = "@KAKASI@ -ieuc -oeuc -w";
 $CHASEN = "@CHASEN@ -j -F '\%m '";
 
 # ChaSen 1.51 or later (with morphological processing)
-$CHASEN_MORPH = "@CHASEN@ -j -F '\%m %H\\n'";
+$CHASEN_NOUN = "@CHASEN@ -j -F '\%m %H\\n'";
 
 # Default Japanese processer
 $WAKATI  = $@OPT_WAKATI_DEFAULT@;
