--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.93 2000-01-30 22:42:29 rug Exp $
+dnl $Id: configure.in,v 1.94 2000-02-01 03:01:53 satoru Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -28,7 +28,7 @@ dnl * Mailing address.
 dnl *
 MAILING_ADDRESS="bug-namazu@namazu.org"
 AC_SUBST(MAILING_ADDRESS)
-AC_DEFINE_UNQUOTED(MAILING_ADDRESS, "$MAILING_ADDRESS")
+AC_DEFINE_UNQUOTED(MAILING_ADDRESS, "$MAILING_ADDRESS", [Mailing address])
 
 dnl *
 dnl * Namazu Copyright.
@@ -36,7 +36,7 @@ dnl *
 COPYRIGHT="Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.\n\
 Copyright (C) 2000 Namazu Project All rights reserved."
 AC_SUBST(COPYRIGHT)
-AC_DEFINE_UNQUOTED(COPYRIGHT, "$COPYRIGHT")
+AC_DEFINE_UNQUOTED(COPYRIGHT, "$COPYRIGHT", [Namazu Copyright])
 
 
 dnl *
@@ -328,8 +328,9 @@ dnl AM_PATH_LISPDIR
 dnl *
 dnl * Set default behavior (will be moved)
 dnl * 
-AC_DEFINE_UNQUOTED(OPT_SCORING, $OPT_SCORING)
-AC_DEFINE(MSIE4MACFIX)
+AC_DEFINE_UNQUOTED(OPT_SCORING, $OPT_SCORING, [Scoring method])
+AC_DEFINE(MSIE4MACFIX, 1,
+    [Define if you want to fix the bug of MSIE4.x for Macintosh :-(])
 
 dnl * 
 dnl * Output Files.
