--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -51,7 +51,7 @@ $ALLOW_REGEX = '.*\.html?|.*\.txt|.*_default|.*\.pdf|.*\.doc|.*\.tex';
 # Do *not* use '$' and '^' regular expression meta characters.
 # that will be automatically appended by mknmz.pl.
 #
-$DENY_REGEX = '.*\.gif|.*\.(jpg|jpeg)|.*\.tar\.gz|core|.*\.bak|.*~|\..*|\x23.*|NMZ\..*';
+$DENY_REGEX = '.*\.gif|.*\.png|.*\.(jpg|jpeg)|.*\.tar\.gz|core|.*\.bak|.*~|\..*|\x23.*|NMZ\..*';
 
 # Pathnames which match this regex will be excluded.
 $EXCLUDE_REGEX = undef;
