* scripts/mknmz.in (load_document): Handle pre and post code 	conversion. [namazu-dev 1469]
	* filter/gfilter.pl (white_space_adjust_filter): Add CR/LF and
	control characters handlings.

	* pl/var.pl.in: Rename a hash variable:
	s/REQUIRE_CODECONV/REQUIRE_PRE_CODECONV/.
	Add new hash variable: REQUIRE_POST_CODECONV.

	* scripts/mknmz.in (load_olemodules): Simpified.
	(load_modules): Ditto.
	(load_filters): New function.

	* filter/pdf.pl (filter): Do not code conversion in it.
	(post_codeconv): Require code conversion after filtering has done.

	* filter/*.pl: Add new function post_codeconv().

	* filter/*.pl: Rename a function name: s/codeconv/pre_codeconv/g

--- a/pl/var.pl.in
+++ b/pl/var.pl.in
@@ -1,5 +1,5 @@
 # -*- Perl -*-
-# $Id: var.pl.in,v 1.8 2000-01-28 09:40:16 satoru Exp $
+# $Id: var.pl.in,v 1.9 2000-02-06 07:36:44 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -130,9 +130,13 @@ $PREFIX = "";
 
 %REQUIRE_ACTIONS = ();
 %RECURSIVE_ACTIONS = ();
-%REQUIRE_CODECONV = 
+%REQUIRE_PRE_CODECONV = 
     (
      'text/plain' => 1,
+     );
+%REQUIRE_POST_CODECONV = 
+    (
+     'text/plain' => 0,
      );
 %Supported = 
     (
