--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.5 2000-02-06 07:36:46 satoru Exp $
+# $Id: mknmz.in,v 1.6 2000-02-10 07:09:09 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -1043,6 +1043,14 @@ sub load_target_list ($) {
     my ($file) = @_;
     my $fh_targets = util::efopen($file);
     my @targets = <$fh_targets>;
+    if (($SYSTEM eq "MSWin32") || ($SYSTEM eq "os2")) {
+	map { 
+	    s/\r//g; 
+	    # Replace \ with / with consideration for Shift_JIS.
+	    s!([\x81-\x9f\xe0-\xef][\x40-\x7e\x80-\xfc]|[\x01-\x7f])!
+		$1 eq "\\" ? "/" : $1!gex;
+	} @targets;
+    }
     chomp @targets; 
     return @targets;
 }
