--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.6 2000-02-10 07:09:09 satoru Exp $
+# $Id: mknmz.in,v 1.7 2000-02-10 12:38:08 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -913,6 +913,11 @@ sub parse_options ()
     }
 
     if (defined $update_index) {
+	unless (-d $update_index) {
+	    print _("No such index: $update_index\n");
+	    exit 1;
+	}
+
 	my $orig_status = $var::NMZ{'status'};
 	$var::NMZ{'status'} = "$update_index/$var::NMZ{'status'}";
 
