--- a/scripts/gcnmz.in
+++ b/scripts/gcnmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 #
-# $Id: gcnmz.in,v 1.4 2000-01-31 10:48:38 satoru Exp $
+# $Id: gcnmz.in,v 1.5 2000-02-11 18:52:03 furukawa Exp $
 #
 # gcnmz.pl - by furukawa@tcp-ip.or.jp
 #
@@ -39,24 +39,26 @@ sub gcnmz{
     my $nmzi = new nmzidx($dir);
     defined($nmzi) or die("NMZ.lock2 found. Maybe this index is being updated by another process now.");
 
+    my $gcflag = 0;
     my $nmzo = new nmzidx($dir, 'w');
-    {
-        my $file_num = 0;
-        my %list;
-        my $nmzfi = $nmzi->open_flist;
-        my $nmzfo = $nmzo->open_flist;
-        while (defined $nmzfi->read(\%list)){
-            if ($list{'t'} != -1){
-                $table{$file_num} = $nmzfo->{'offset'};
-                $nmzfo->write(\%list);
-            }
-            ++$file_num;
-        }
-        $nmzfi->close;
-        $nmzfo->close;
-    }
 
-    {
+    my $file_num = 0;
+    my %list;
+    my $nmzfi = $nmzi->open_flist;
+    my $nmzfo = $nmzo->open_flist;
+    while (defined $nmzfi->read(\%list)){
+        if ($list{'t'} != -1){
+            $table{$file_num} = $nmzfo->{'offset'};
+            $nmzfo->write(\%list);
+        }else{
+            $gcflag = 1;
+        }
+        ++$file_num;
+    }
+    $nmzfi->close;
+    $nmzfo->close;
+
+    if ($gcflag){
         my $word;
         my %list_i;
 
@@ -73,9 +75,7 @@ sub gcnmz{
         }
         $nmzwi->close;
         $nmzwo->close;
-    }
 
-    {
         my $nmzpi = $nmzi->open_phrase;
         my $nmzpo = $nmzo->open_phrase;
         for (my $x = 0; $x < 0x10000; $x++){
@@ -91,15 +91,17 @@ sub gcnmz{
         }
         $nmzpi->close;
         $nmzpo->close;
-    }
 
-    $nmzo->write_status($nmzi);
-    $nmzo->replace_db($backup);
-    if (my $log = $nmzo->log_open("[Garbage Collection]")){
-        $log->printf("Collected Entry: %d files\n", $nmzi->{'flist'}->{'offset'} - $nmzo->{'flist'}->{'offset'});
-        $log->printf("Total Files: %d files\n", $nmzo->{'flist'}->{'offset'});
-        $log->printf("Total Keywords: %d files\n", $nmzo->{'word'}->{'offset'});
-        $nmzo->log_close;
+        $nmzo->write_status($nmzi);
+        $nmzo->replace_db($backup);
+        if (my $log = $nmzo->log_open("[Garbage Collection]")){
+            $log->printf("%-20s %d\n", "Collected Entry:", $nmzi->{'flist'}->{'offset'} - $nmzo->{'flist'}->{'offset'});
+            $log->printf("%-20s %d\n", "Total Files:", $nmzo->{'flist'}->{'offset'});
+            $log->printf("%-20s %d\n", "Total Keywords:", $nmzo->{'word'}->{'offset'});
+            $nmzo->log_close;
+        }
+    }else{
+        $nmzo->remove_tmpdb;
     }
     $nmzi->close;
 }
