Use guess_category_value() that is taken from gettext-0.10.35.

--- a/nmz/Makefile.am
+++ b/nmz/Makefile.am
@@ -1,6 +1,6 @@
 # Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.28 2000-02-01 11:24:14 satoru Exp $
+# $Id: Makefile.am,v 1.29 2000-02-13 17:34:52 rug Exp $
 #
 
 AUTOMAKE_OPTIONS = 1.4 no-dependencies
@@ -16,16 +16,16 @@ DEFS = -DLOCALEDIR=\"$(localedir)\" \
        @DEFS@
 
 pkginclude_HEADERS = codeconv.h field.h hlist.h i18n.h idxname.h \
-	libnamazu.h parser.h query.h re.h regex.h \
+	libnamazu.h l10n-ja.h parser.h query.h re.h regex.h \
 	search.h util.h var.h wakati.h 
 lib_LTLIBRARIES = libnmz.la
 
 libnmz_la_SOURCES = alias.c alias.h codeconv.c codeconv.h \
 	field.c field.h hlist.c hlist.h i18n.c i18n.h \
-	idxname.c idxname.h libnamazu.c libnamazu.h parser.c parser.h \
-	query.c query.h re.c re.h replace.c replace.h regex.c regex.h \
-	search.c search.h seed.c seed.h util.c util.h var.c var.h \
-	wakati.c wakati.h 
+	idxname.c idxname.h libnamazu.c libnamazu.h l10n-ja.c l10n-ja.h \
+	parser.c parser.h query.c query.h re.c re.h replace.c replace.h \
+	regex.c regex.h search.c search.h seed.c seed.h util.c util.h \
+	var.c var.h wakati.c wakati.h 
 
 libnmz_la_LDFLAGS = -version-info 2:0:0
 
