--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,8 +1,8 @@
-# $Id: Makefile.am,v 1.7 2000-02-12 13:34:57 rug Exp $ 
+# $Id: Makefile.am,v 1.8 2000-02-14 05:05:33 rug Exp $ 
 AUTOMAKE_OPTIONS = no-dependencies
 
 EXTRA_DIST = alloca.c memcmp.c strcspn.c vsnprintf.c memmove.c strncasecmp.c \
-	     memset.c setenv.c strcasecmp.c strstr.c system.h easy-vsnprintf.c
+	     memset.c strcasecmp.c strstr.c system.h easy-vsnprintf.c
 
 noinst_LIBRARIES = libnmzut.a
 libnmzut_a_SOURCES = getopt.c getopt1.c getopt.h
