--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.102 2000-02-14 05:05:31 rug Exp $
+dnl $Id: configure.in,v 1.103 2000-02-14 08:04:19 rug Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -14,6 +14,22 @@ dnl * Process this file with autoconf to produce a configure script.
 dnl *
 AC_INIT(src/cgi.c)
 AC_PREREQ(2.13)               dnl Minimum Autoconf version required.
+
+dnl *
+dnl * libtool versioning.
+dnl *
+
+# Before making a release, the LTVERSION string should be modified.
+# The string is of the form C:R:A.
+# - If interfaces have been changed or added, but binary compatibility has
+#   been preserved, change to C+1:0:A+1
+# - If binary compatibility has been broken (eg removed or changed interfaces)
+#   change to C+1:0:0
+# - If the interface is the same as the previous version, change to C:R+1:A
+
+LTVERSION="2:0:0"
+AC_SUBST(LTVERSION)
+
 AM_INIT_AUTOMAKE(namazu, 1.9.14)
 AM_MAINTAINER_MODE
 
